Працює над ДЗ-3

--- a/index.html
+++ b/index.html
@@ -298,32 +298,32 @@
           <ul class="list-style content-center">
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo1.svg" alt="logo_1" />
+                <img src="images/customers/logo1.svg" alt="logo_1" class="company-logo"/>
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo2.svg" alt="logo_2" />
+                <img src="images/customers/logo2.svg" alt="logo_2"  class="company-logo" />
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo3.svg" alt="logo_3" />
+                <img src="images/customers/logo3.svg" alt="logo_3"  class="company-logo" />
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo4.svg" alt="logo_4" />
+                <img src="images/customers/logo4.svg" alt="logo_4"  class="company-logo"/>
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo5.svg" alt="logo_5" />
+                <img src="images/customers/logo5.svg" alt="logo_5"  class="company-logo"/>
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo6.svg" alt="logo_6" />
+                <img src="images/customers/logo6.svg" alt="logo_6"  class="company-logo"/>
               </a>
             </li>
           </ul>
@@ -389,8 +389,6 @@
         </a>
       </form>
       </div>
-      
-      <hr class="footer-line" />
 
       <span class="contacts-down">2020 | Developed by GoIT Students</span>
     </footer>
