Праця над ДЗ -3

--- a/portfolio.html
+++ b/portfolio.html
@@ -179,7 +179,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="footer-block container">
+    <footer class="footer-block">
       <div class="main-footer-block">
     
         <div class="contacts-footer-block">
