--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
     </main>
 
     <!-- footer -->
-    <footer class="footer-block container">
+    <footer class="footer-block">
       <div class="main-footer-block">
         
       <div class="contacts-footer-block">
