--- a/index.html
+++ b/index.html
@@ -298,32 +298,56 @@
           <ul class="list-style content-center">
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo1.svg" alt="logo_1" class="company-logo"/>
+                <img
+                  src="images/customers/logo1.svg"
+                  alt="logo_1"
+                  class="company-logo"
+                />
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo2.svg" alt="logo_2"  class="company-logo" />
+                <img
+                  src="images/customers/logo2.svg"
+                  alt="logo_2"
+                  class="company-logo"
+                />
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo3.svg" alt="logo_3"  class="company-logo" />
+                <img
+                  src="images/customers/logo3.svg"
+                  alt="logo_3"
+                  class="company-logo"
+                />
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo4.svg" alt="logo_4"  class="company-logo"/>
+                <img
+                  src="images/customers/logo4.svg"
+                  alt="logo_4"
+                  class="company-logo"
+                />
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo5.svg" alt="logo_5"  class="company-logo"/>
+                <img
+                  src="images/customers/logo5.svg"
+                  alt="logo_5"
+                  class="company-logo"
+                />
               </a>
             </li>
             <li class="company-box">
               <a href="" class="link-company">
-                <img src="images/customers/logo6.svg" alt="logo_6"  class="company-logo"/>
+                <img
+                  src="images/customers/logo6.svg"
+                  alt="logo_6"
+                  class="company-logo"
+                />
               </a>
             </li>
           </ul>
@@ -334,60 +358,59 @@
     <!-- footer -->
     <footer class="footer-block">
       <div class="main-footer-block">
-        
-      <div class="contacts-footer-block">
-      <h4 class="footer-logo"><span class="title">Web</span> Studio</h4>
-      <address class="footer-address">
-        <span>г. Киев, пр-т Леси Украинки, 26</span><br />
-        <a href="" class="footer-contacts">info@example.com</a></br>
-        <a href="" class="footer-contacts">+38 099 111 11 11</a>
-      </address>
-    </div>
-    
-      <div class="logo-block">
-      <h3 class="footer-title">присоединяйтесь</h3>
-      <ul class="list-style logo-box-footer">
-        <li class="footer-links">
-          <a href="" class="footer-link">
-            <img src="images/social_links/instagram.svg" alt="instagram" />
-          </a>
-        </li>
-        <li class="footer-links">
-          <a href="" class="footer-link">
-            <img src="images/social_links/twitter.svg" alt="twitter" />
-          </a>
-        </li>
-        <li class="footer-links">
-          <a href="" class="footer-link">
-            <img src="images/social_links/facebook.svg" alt="facebook" />
-          </a>
-        </li>
-        <li class="footer-links">
-          <a href="" class="footer-link">
-            <img src="images/social_links/linkedin.svg" alt="linkedin" />
-          </a>
-        </li>
-      </ul>
-      </div>
+        <div class="contacts-footer-block">
+          <h4 class="footer-logo"><span class="title">Web</span> Studio</h4>
+          <address class="footer-address">
+            <span>г. Киев, пр-т Леси Украинки, 26</span><br />
+            <a href="" class="footer-contacts">info@example.com</a>
+            <a href="" class="footer-contacts">+38 099 111 11 11</a>
+          </address>
+        </div>
 
-      <form class="form-page">
-        <h3 class="footer-title">Подпишитесь на рассылку</h3>
-        <input
-          type="text"
-          placeholder="E-mail"
-          name="email"
-          required
-          class="subscription footer-block"
-        />
-        <a href="" class="button"
-          >Подписаться
-          <img
-            src="./images/subscription-logo.svg"
-            alt="logo"
-            class="logo-img"
+        <div class="logo-block">
+          <h3 class="footer-title">присоединяйтесь</h3>
+          <ul class="list-style logo-box-footer">
+            <li class="footer-links">
+              <a href="" class="footer-link">
+                <img src="images/social_links/instagram.svg" alt="instagram" />
+              </a>
+            </li>
+            <li class="footer-links">
+              <a href="" class="footer-link">
+                <img src="images/social_links/twitter.svg" alt="twitter" />
+              </a>
+            </li>
+            <li class="footer-links">
+              <a href="" class="footer-link">
+                <img src="images/social_links/facebook.svg" alt="facebook" />
+              </a>
+            </li>
+            <li class="footer-links">
+              <a href="" class="footer-link">
+                <img src="images/social_links/linkedin.svg" alt="linkedin" />
+              </a>
+            </li>
+          </ul>
+        </div>
+
+        <form class="form-page">
+          <h3 class="footer-title">Подпишитесь на рассылку</h3>
+          <input
+            type="text"
+            placeholder="E-mail"
+            name="email"
+            required
+            class="subscription footer-block"
           />
-        </a>
-      </form>
+          <a href="" class="button"
+            >Подписаться
+            <img
+              src="./images/subscription-logo.svg"
+              alt="logo"
+              class="logo-img"
+            />
+          </a>
+        </form>
       </div>
 
       <span class="contacts-down">2020 | Developed by GoIT Students</span>
