--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
 
   <body>
     <!-- header -->
-    <header>
+    <header class="header">
       <!-- nav-header -->
       <div class="container header-container">
         <nav class="header-nav">
@@ -284,7 +284,7 @@
         </form>
       </div>
 
-      <span class="contacts-down">2020 | Developed by GoIT Students</span>
+      <!-- <p class="contacts-down">2020 | Developed by GoIT Students</p> -->
     </footer>
   </body>
 </html>
