Вносить правки в дз -3

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           <h2 class="primery-text-title">Наша команда</h2>
           <ul class="list-style">
             <li class="person-box">
-              <img src="images/team/photo_1.jpg" alt="photo_1" />
+              <img src="images/team/photo1.png" alt="photo_1" />
               <h3 class="team-title">Николай Кучеренко</h3>
               <p class="team-text">Product Designer</p>
               <ul class="list-style icon-box">
@@ -180,7 +180,7 @@
               </ul>
             </li>
             <li class="person-box">
-              <img src="images/team/photo_2.jpg" alt="photo_2" />
+              <img src="images/team/photo2.png" alt="photo_2" />
               <h3 class="team-title">Ольга Иванова</h3>
               <p class="team-text">Frontend Developer</p>
               <ul class="list-style icon-box">
@@ -216,7 +216,7 @@
               </ul>
             </li>
             <li class="person-box">
-              <img src="images/team/photo_3.jpg" alt="photo_3" />
+              <img src="images/team/photo3.png" alt="photo_3" />
               <h3 class="team-title">Андрей Шевченко</h3>
               <p class="team-text">Marketing</p>
               <ul class="list-style icon-box">
@@ -252,7 +252,7 @@
               </ul>
             </li>
             <li class="person-box">
-              <img src="images/team/photo_4.jpg" alt="photo_4" />
+              <img src="images/team/photo4.png" alt="photo_4" />
               <h3 class="team-title">Иван Николаев</h3>
               <p class="team-text">UI Designer</p>
               <ul class="list-style icon-box">
