--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
       </section>
 
       <!-- team section -->
-      <section class="container">
-        <div class="section-team">
+      <section class="team-container">
+        <div class="container section-team">
           <h2 class="primery-text-title">Наша команда</h2>
           <ul class="list-style">
             <li class="person-box">
